# pelican

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  audit.toml  deny.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  device_support.md
.github/workflows/: ci.yml
docs/: README.md  audit-2026-05-03.md  garmin-mtp-notes.md  garmin-mtp.md  playlists.md  research-log.md  status.md  testing.md  vendor-ops.md
docs/references/: better-sync-playlist.go.txt  better-sync-sanitize.go.txt  go-mtpfs-pr1.md
examples/: check_formats.rs  claim_test.rs  diagnose.rs  dump_file.rs  dump_normalize.rs  long_open.rs  probe_audiobooks.rs  probe_playlist.rs  probe_vendor_ops.rs  test_delete.rs  usb_inspect.rs  usb_reset.rs  wipe_music.rs  wipe_stubs.rs
packaging/aur/: PKGBUILD
packaging/desktop/: pelican.desktop
packaging/flatpak/: README.md  com.krypteia.Pelican.metainfo.xml  com.krypteia.Pelican.yaml
scripts/: check.sh  install-hooks.sh
src/: app.rs  cli.rs  garmin.rs  gvfs.rs  history.rs  main.rs  mtp.rs  playlist.rs  theme.rs  transcode.rs  transfer.rs
tests/: sanitization.rs
udev/: 99-garmin-music.rules
