[package]
name = "pelican"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Pelican — sync your music to a Garmin watch on Linux. A Krypteia tool. No telemetry, no cloud."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/n0ble-s1x/pelican"
homepage = "https://github.com/n0ble-s1x/pelican"
# Author: maintainer of this fork; copyright remains Krypteia LLC (see LICENSE-*).
authors = ["n0ble-s1x <krypteia.annex447@8alias.com>"]
keywords = ["garmin", "mtp", "music", "sync", "linux"]
categories = ["multimedia", "command-line-utilities"]
exclude = [
    "/target",
    "/docs",
    "/packaging",
    "/.github",
    "/examples",
    "/Cargo.lock.bak",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.34", features = ["all_loaders"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nusb = "0.2"
id3 = "1.14"
mp4ameta = "0.11"
rfd = "0.14"
crossbeam-channel = "0.5"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

mtp = { package = "mtp-rs", version = "0.13", optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

[features]
default = ["mtp-backend"]
mtp-backend = ["dep:mtp", "dep:tokio", "dep:futures", "dep:bytes"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
